Sugars screen is added with minor bugs

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".IngredientDetailActivity" />
         </activity>
+        <activity
+            android:name="com.tolstovenator.brewcalc.preferences.SettingsActivity"
+            android:label="@string/title_ingredient_detail" >
+        </activity>
         <service android:name="com.tolstovenator.brewcalc.repository.IngredientService"
             ></service>
     </application>
