--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:debuggable="true" >
         <activity
             android:name="com.tolstovenator.brewcalc.IngredientListActivity"
             android:label="@string/app_name" >
@@ -45,7 +46,15 @@
         </activity>
         <activity
             android:name="com.tolstovenator.brewcalc.preferences.SettingsActivity"
-            android:label="@string/title_ingredient_detail" >
+            android:label="@string/settings" >
+        </activity>
+        <activity
+            android:name="com.tolstovenator.brewcalc.calc.AlcoholCalculatorActivity"
+            android:label="@string/settings" >
+        </activity>
+        <activity
+            android:name="com.tolstovenator.brewcalc.calc.CalculatorsListActivity"
+            android:label="@string/settings" >
         </activity>
         <service android:name="com.tolstovenator.brewcalc.repository.IngredientService"
             ></service>
